--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "concurrently \"npm run start-server\" \"npm run start-app\"",
+    "start-app": "webpack-dev-server",
+    "start-server": "node server/index.js",
     "build:prod": "webpack -p",
     "build:dev": "webpack",
     "clean": "npm cache clean && npm run rimraf -- node_modules dist",
@@ -27,6 +29,7 @@
     "babel-plugin-transform-regenerator": "^6.24.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "concurrently": "^3.5.0",
     "css-loader": "^0.26.1",
     "enzyme": "^3.0.0",
     "enzyme-adapter-react-15": "^1.0.0",
@@ -62,13 +65,12 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
+    "express": "^4.16.2",
     "jquery": "^3.1.1",
     "prop-types": "^15.5.10",
     "react": "^15.4.2",
-    "react-autosize-textarea": "^0.4.8",
     "react-async-script": "0.8.0",
     "react-dom": "^15.4.2",
-    "react-masonry-component": "^5.0.7",
     "react-redux": "^5.0.2",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
