--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.4.2",
     "react-async-script": "0.8.0",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^4.1.1",
