--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^4.0.8",
+    "react-toggle-switch": "^3.0.3",
     "redux": "^3.6.0",
     "redux-form": "^6.8.0",
     "redux-observable": "^0.16.0",
