--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "webpack --config webpack.prod.js",
     "clean": "npm cache clean && npm run rimraf -- node_modules dist",
     "clean:dist": "npm run rimraf -- dist",
-    "rimraf": "rimraf"
+    "rimraf": "rimraf",
+    "test": "jest --config jest.config.js",
+    "test:watch": "jest --config jest.config.js --notify --watch"
   },
   "keywords": [],
   "author": "",
@@ -54,6 +56,7 @@
     "react-test-renderer": "^15.6.2",
     "redux-devtools-extension": "^2.13.0",
     "redux-logger": "^2.8.2",
+    "redux-mock-store": "^1.3.0",
     "rimraf": "^2.6.1",
     "style-loader": "^0.13.1",
     "uglifyjs-webpack-plugin": "^1.0.1",
